Fixed simulation, deactivated dark mode, fixed css on chrome based browsers

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -367,7 +367,7 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   .footer {
     border-color: #222;
   }
@@ -386,7 +386,7 @@
   .customTooltip{
     background-color:#111
   }
-}
+} */
 
 .p {
   position: relative;
